src/tests/krate/publish/snapshots/all__krate__publish__build_metadata__version_with_build_metadata@build_metadata_1.snap
---
source: src/tests/krate/publish/build_metadata.rs
expression: response.into_json()
---
crate:
  badges: ~
  categories: ~
  created_at: "[datetime]"
  description: description
  documentation: ~
  downloads: 0
  exact_match: false
  homepage: ~
  id: foo
  keywords: ~
  links:
    owner_team: /api/v1/crates/foo/owner_team
    owner_user: /api/v1/crates/foo/owner_user
    owners: /api/v1/crates/foo/owners
    reverse_dependencies: /api/v1/crates/foo/reverse_dependencies
    version_downloads: /api/v1/crates/foo/downloads
    versions: /api/v1/crates/foo/versions
  max_stable_version: 1.0.0+foo
  max_version: 1.0.0+foo
  name: foo
  newest_version: 1.0.0+foo
  recent_downloads: ~
  repository: ~
  updated_at: "[datetime]"
  versions: ~
warnings:
  invalid_badges: []
  invalid_categories: []
  other: []

